--- a/index.qmd
+++ b/index.qmd
@@ -5,6 +5,7 @@ format:
   revealjs:
     theme: [default, custom.scss]
     slide-number: true
+    fig-dpi: 300
 incremental: true
 editor: source
 ---
