--- a/index.qmd
+++ b/index.qmd
@@ -45,6 +45,24 @@ Leucht et al.(2013) **World Psychiatry**; Zhang et al.(2022) **Frontiers in Phar
 
 ::::
 
-## 
+## Differentially Methylated Regions 
+
+:::: columns
+
+:::{.column width="70%"}
+
+![](img/CommonEffectsDMRsb.png)
+
+:::
+
+::: {.column width="30%"}
+
+<br> Common Effects <br><br> Meta-analysis EWAS results <br><br> n = 136
+
+:::
+
+::::
+
+##
 
 
