--- a/index.qmd
+++ b/index.qmd
@@ -45,9 +45,16 @@ Leucht et al.(2013) **World Psychiatry**; Zhang et al.(2022) **Frontiers in Phar
 
 ::::
 
-## Results
+## Methods
 
-- Differentially methylated region analysis (DMRs)
+- Common 
+Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br> 
+
+- Specific 
+Model: 𝛽 ~ AP vs (Other AP + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br> 
+
+- Differentially methylated region analysis (DMRs) __dmrff__
+
 - Database investigation of DMR-annotated genes e.g. SynGO, GeneTrail 3.2, EpiFactors 2022
 
 
@@ -73,7 +80,7 @@ Leucht et al.(2013) **World Psychiatry**; Zhang et al.(2022) **Frontiers in Phar
 
 ## Specific Effects Analysis n=263 {.smaller}
 
-
+![](img/SpecificDMRs.png)
 
 ## Database search of DMR genes 
 
