--- a/notesBiologicalInterpret.qmd
+++ b/notesBiologicalInterpret.qmd
@@ -9,9 +9,7 @@ editor: source
 incremental: true
 
 ---
-## Differentially Methylated Regions <br> associated with antipsychotic treatment <br> <br> <br> <br> <br> Martens Summer Seminar <br> June 17, 2024 {background-color="black" background-image="img/summerFlowers.jpg" background-size="cover" background-opacity="0.7"}
-
-
+{.fragment width="450" height="300"}
 
 ## Looking back <br>
 
@@ -20,10 +18,6 @@ incremental: true
 -   Median study duration 6 weeks, maximum 13 weeks (PMID:37159349)
 -   Treatment discontinuation rate (TDR) lower for monotherapy vs polypharmacy
 -   Risperidone highest TDR and shortest Time to discontinuation (TTD) (PMID: 35770081)
-
-::: footer
-Leucht et al.(2013) **World Psychiatry**; Zhang et al.(2022) **Frontiers in Pharmacology**, 2022
-:::
 
 ## Sample Selection 
 
