--- a/notesBiologicalInterpret.qmd
+++ b/notesBiologicalInterpret.qmd
@@ -69,3 +69,5 @@ Unlike genetic variants, DNA methylation patterns can change over an individual'
 There is often little overlap between genes and pathways identified by EWAS and GWAS of the same trait, suggesting that EWAS may be capturing different biological information that is not directly related to the causal genetic factors. (5)
 Interpreting EWAS results can be challenging due to the complexity of epigenetic mechanisms and the difficulty in establishing where DNA methylation changes lie on the causal pathway between genotype, gene expression, and phenotype. (5)
 Comparing EWAS results to existing biological knowledge derived from GWAS may not yield much insight, as EWAS and GWAS appear to prioritize different aspects of disease biology.
+
+Dysregulation of epigenetic processes has been demonstrated in SCZ - not only in clinical studies, but also in animal models, cell lines, and postmortem brain studies. Not only DNAm. Epigenetic regulation is important, particularly during brain development (pre- and postnatally).  Epigenetic modifications are aslo involved in maintenance of sex differences in the brain (99) which may explain differences in susceptibility, onset, pathogenesis, and severity of SCZ between males and females (100). 
