--- a/index.qmd
+++ b/index.qmd
@@ -63,10 +63,14 @@ Model: 𝛽 ~ AP-serum + Sex + Age + Smoking score + Diagnosis + Technical batch
 - Specific Effects<br>
 Model: 𝛽 ~ AP vs (2 APs + MF) + Sex + Age + Smoking score + Diagnosis + Technical batch + Cell counts <br><br> 
 
-- Differentially methylated region analysis (DMRs) __dmrff__<br>
+- Differentially methylated region analysis (DMRs): _dmrff_
+<br><br>
 
-- Database investigation of DMR-annotated genes e.g. GeneTrail 3.2, SynGO, Enrichr, EpiFactors 2022
+- Database investigation of DMR-annotated genes: <br> GeneTrail 3.2, SynGO, Enrichr, EpiFactors 2022
 
+::: footer
+Martens Summer Seminar 2024
+::: 
 
 ## Results: Common Effects Analysis n=136 {.smaller}
 
@@ -74,7 +78,7 @@ Model: 𝛽 ~ AP vs (2 APs + MF) + Sex + Age + Smoking score + Diagnosis + Techn
 
 :::{.column width="70%"}
 
-![](img/CommonEffectsDMRsb.png)
+![](img/CommonEffectsDMRsb.png){width="600px" height=auto}
 
 :::
 
@@ -165,6 +169,7 @@ Genes associated with transcriptionally active chromatin
 
 ## Discussion/Conclusion
 
+- Small sample sizes when selecting monotherapy
 - Real world studies also challenging
 - Median study duration 6 weeks, maximum 13 weeks (PMID:37159349)
 - 
@@ -180,5 +185,5 @@ Stéphanie, Anne-Kristin, You all!  Have a great summer!
 
 ![](img/Watermelon.jpeg){fig-align="center"}
 
-##
+
 
